@@ -120,6 +120,7 @@ enum info {
 	SAVING,
 	SAVED,
 	MODIFIED_SAVED,
+	SAVE_READ_ONLY_DOCUMENT,
 	PRESSF1,
 	BLOCK_START_MARKED,
 	VERTICAL_BLOCK_START_MARKED,
